--- a/index.html
+++ b/index.html
@@ -19,11 +19,86 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+
+    .flex-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .grid-container{
+      display: grid;
+      height: 748px;
+      width: 748px;
+      grid-template-rows: 1fr 1fr 40px;
+      grid-template-columns: 1fr 2fr 40px;
+    }
+
+    .box {
+      display: grid;
+      border: solid;
+    }
+
+    .one {
+      background-color: #E72F24;
+      border-bottom: solid;
+      border-right: solid;
+    }
+
+    .two {
+      display: grid;
+      grid-column-start: 2;
+      grid-column-end: 4;
+      background-color: #F0F1EC;
+    }
+
+    .three {
+      background-color: #F0F1EC;
+    }
+
+    .four {
+      background-color: #F0F1EC;
+    }
+
+    .five {
+      background-color: #004592;
+    }
+
+    .six {
+      background-color: #F0F1EC;
+    }
+
+    .seven {
+      background-color: #F9D01E;
+    }
+
+    .eight {
+      background-color: #232629;
+    }
+
+    .nine {
+      background-color: #F0F1EC;
+    }
+
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
+  <div class="flex-container"> 
+    <div class="grid-container">
+      <div class="box one"></div>
+      <div class="box two"></div>
+      <div class="box three"></div>
+      <div class="box four"></div>
+      <div class="box five"></div>
+      <div class="box six"></div>
+      <div class="box seven"></div>
+      <div class="box eight"></div>
+      <div class="box nine"></div>
+    </div>
+  </div>  
 </body>
 
 </html>
