--- a/index.html
+++ b/index.html
@@ -20,65 +20,60 @@
     But grid lines are transparent!
     */
 
-    .flex-container {
+    body {
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
+      margin: 0;
+      padding: 0;
     }
 
-    .grid-container{
-      display: grid;
+    .container {
       height: 748px;
       width: 748px;
-      grid-template-rows: 1fr 1fr 40px;
-      grid-template-columns: 1fr 2fr 40px;
+      display: grid;
+      background-color: #000;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 155px 22px;
+      gap: 9px;
     }
 
     .box {
-      display: grid;
-      border: solid;
+      background-color: #F0F1EC;
     }
 
-    .one {
+    .red {
       background-color: #E72F24;
-      border-bottom: solid;
-      border-right: solid;
+    }
+    
+    .white1 {
+      grid-column: span 3;
     }
 
-    .two {
-      display: grid;
-      grid-column-start: 2;
-      grid-column-end: 4;
-      background-color: #F0F1EC;
+    .white2 {
+      grid-row: span 2;
     }
 
-    .three {
-      background-color: #F0F1EC;
+    .white3 {
+      grid-area: 2 / 2 / 4 / 4;
     }
 
-    .four {
-      background-color: #F0F1EC;
-    }
-
-    .five {
+    .blue {
       background-color: #004592;
+      border-bottom: 10px solid;
     }
 
-    .six {
-      background-color: #F0F1EC;
+    .white4 {
+      grid-row: span 2;
     }
 
-    .seven {
-      background-color: #F9D01E;
+    .yellow {
+      background-color: yellow;
     }
 
-    .eight {
-      background-color: #232629;
-    }
-
-    .nine {
-      background-color: #F0F1EC;
+    .black {
+      background-color: black;
     }
 
   </style>
@@ -86,19 +81,19 @@
 
 <body>
   <!-- Write your HTML here -->
-  <div class="flex-container"> 
-    <div class="grid-container">
-      <div class="box one"></div>
-      <div class="box two"></div>
-      <div class="box three"></div>
-      <div class="box four"></div>
-      <div class="box five"></div>
-      <div class="box six"></div>
-      <div class="box seven"></div>
-      <div class="box eight"></div>
-      <div class="box nine"></div>
+    <div class="container">
+      <div class="box red"></div>
+      <div class="box white1"></div>
+      <div class="box white2"></div>
+      <div class="box white3"></div>
+
+      <div class="box blue"></div>
+      <div class="box white4"></div>
+
+      <div class="box"></div>
+      <div class="box yellow"></div>
+      <div class="box black"></div>
     </div>
-  </div>  
 </body>
 
 </html>
